# scriptr

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml
Formula/: scriptr.rb
src/: main.rs
