[package]
name    = "scriptr"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Fast, caching launcher for Cargo single‑file packages"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

